poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  labels:
    app: poll
  namespace: default

spec:
  ports:
  - port: 80
    name: poll-service
    targetPort: 80
  selector:
    app: poll
  type: ClusterIP
