traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  labels:
    app: traefik
  namespace: kube-public
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30021
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30042
  selector:
    app: traefik
  type: NodePort
